[package]
name = "actors-in-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_flat_path = "0.1.2"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
